tests/baselines/reference/dontShowCompilerGeneratedMembers.errors.txt
==== tests/cases/compiler/dontShowCompilerGeneratedMembers.ts (3 errors) ====
    var f: {
        ~~~~
        x: number;
    ~~~~~~~~~~~~~~
        <-
         ~
!!! dontShowCompilerGeneratedMembers.ts(3,6): error TS1008: Unexpected token; 'type parameter' expected.
    ~~~~~~
!!! dontShowCompilerGeneratedMembers.ts(1,5): error TS2012: Type 'number' is not assignable to type '{ x: number; (): any; }':
!!! 	Type 'Number' is missing property 'x' from type '{ x: number; (): any; }'.
    };
    ~
!!! dontShowCompilerGeneratedMembers.ts(4,1): error TS1003: Identifier expected.